ADD: Gameplay Scene is added. Board Generation System is added.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ crashlytics-build.properties
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+/[Pp]ackages/*
+!/Packages/manifest.json
+!/Packages/packages-lock.json
